refactor(server): Improve Invalid Schema Evolution on fields error message